@@ -78,7 +78,7 @@ class LSX_TO_Destination{
 		add_action('lsx_to_map_meta',array($this, 'content_meta'));
 		add_action('lsx_to_modal_meta',array($this, 'content_meta'));
 
-		add_action( 'lsx_to_framework_destination_tab_general_settings_bottom', array($this,'general_settings'), 10 , 2 );
+		add_action( 'lsx_to_framework_destination_tab_general_settings_bottom', array($this,'general_settings'), 10 , 1 );
 
 		add_filter( 'lsx_to_page_navigation', array( $this, 'page_links') );
 	}
@@ -256,12 +256,11 @@ class LSX_TO_Destination{
 	 * @param $tab string
 	 * @return null
 	 */
-	public function general_settings( $post_type='destination',$tab=false ) {
-		if('archives'!== $tab){return false;}
+	public function general_settings() {
 		?>
 			<tr class="form-field -wrap">
 				<th scope="row">
-					<label for="description"><?php esc_html__('Display the map in the banner','tour-operator'); ?></label>
+					<label for="description"><?php esc_html_e('Display the map in the banner','tour-operator'); ?></label>
 				</th>
 				<td>
 					<input type="checkbox"  {{#if enable_banner_map}} checked="checked" {{/if}} name="enable_banner_map" />
